# AngelscriptUtils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  vcpkg.json
cmake/: InputFilesList.cmake  InstallPDB.cmake  MSVCRuntime.cmake  PDBUtils.cmake  WinXPSupport.cmake
include/AngelscriptUtils/: ASUtilsConfig.h.in  CASManager.h  CASModule.h  CASModuleManager.h  CMakeLists.txt  IASContextResultHandler.h  IASInitializer.h  IASModuleBuilder.h
include/AngelscriptUtils/ScriptAPI/: CMakeLists.txt  Scheduler.h
include/AngelscriptUtils/ScriptAPI/Reflection/: ASReflection.h  CASEngineReflectionGroup.h  CASModuleReflectionGroup.h  CMakeLists.txt  EngineReflectionGroup.h  IASReflectionGroup.h  IReflectionGroup.h  ModuleReflectionGroup.h  ReflectionGroup.h  ReflectionScriptAPI.h
include/AngelscriptUtils/compilation/: CMakeLists.txt  GlobalVariablesList.h
include/AngelscriptUtils/event/: CASEventManager.h  CMakeLists.txt  Event.h  EventArgs.h  EventDispatcher.h  EventLocator.h  EventRegistry.h  EventScriptAPI.h  EventSystem.h
include/AngelscriptUtils/execution/: CMakeLists.txt  Execution.h  Metadata.h  Packing.h  Parameters.h  RequestContext.h
include/AngelscriptUtils/util/: ASExtendAdapter.h  ASLogging.h  ASPlatform.h  ASUtil.h  CASBaseClass.h  CASExtendAdapter.h  CASRefPtr.h  CMakeLists.txt  IASExtendAdapter.h  StringUtils.h
include/AngelscriptUtils/utility/: BaseClasses.h  CMakeLists.txt  ContextUtils.h  GeneralUtils.h  Introspection.h  MessageLogging.h  Objects.h  RegistrationUtils.h  SmartPointers.h  TypeInfo.h  TypeProviders.h  TypeStringUtils.h  Variant.h
include/AngelscriptUtils/wrapper/: ASCallable.h  CASArguments.h  CMakeLists.txt  WrappedScriptContext.h
resources/scripts/: test.as
scripts/: test.as
src/: CMakeLists.txt
src/Angelscript/: CASBaseEvent.cpp  CASBaseEvent.h  CASBaseEventCaller.h  CASEvent.cpp  CASEvent.h  CASEventManager.cpp  CASEventManager.h  CASHook.cpp  CASHook.h  CASHookManager.cpp  CASHookManager.h  CASLoggingContextResultHandler.h  CASManager.cpp  CASManager.h  CASModule.cpp  CASModule.h  CASModuleDescriptor.cpp  CASModuleDescriptor.h  CASModuleManager.cpp  CASModuleManager.h  CMakeLists.txt  IASContextResultHandler.h  IASInitializer.h  IASModuleBuilder.h
src/Angelscript/ScriptAPI/: CASScheduler.cpp  CASScheduler.h  CMakeLists.txt
src/Angelscript/ScriptAPI/Reflection/: ASReflection.cpp  ASReflection.h  CASEngineReflectionGroup.cpp  CASEngineReflectionGroup.h  CASModuleReflectionGroup.cpp  CASModuleReflectionGroup.h  CMakeLists.txt
src/Angelscript/add_on/: CMakeLists.txt  scriptdictionary.cpp  scriptstdstring.cpp  scriptstdstring.h
src/Angelscript/event/: CASBaseEvent.cpp  CASBaseEvent.h  CASBaseEventCaller.h  CASEvent.cpp  CASEvent.h  CASEventCaller.cpp  CASEventCaller.h  CASEventManager.cpp  CASEventManager.h
src/Angelscript/util/: ASExtendAdapter.cpp  ASExtendAdapter.h  ASLogging.cpp  ASLogging.h  ASUtil.cpp  ASUtil.h  CASBaseClass.cpp  CASBaseClass.h  CASBaseLogger.h  CASExtendAdapter.h  CASFileLogger.cpp  CASFileLogger.h  CASObjPtr.h  CASRefPtr.h  CMakeLists.txt  ContextUtils.cpp  ContextUtils.h  IASExtendAdapter.h  IASLogger.cpp  IASLogger.h  Platform.h  StringUtils.h
src/Angelscript/wrapper/: ASCallable.cpp  ASCallable.h  ASCallableConst.h  CASArguments.cpp  CASArguments.h  CASContext.cpp  CASContext.h  CMakeLists.txt
src/AngelscriptUtils/: .gitignore  ASUtilsConfig.h.in  CASLoggingContextResultHandler.cpp  CASManager.cpp  CASModule.cpp  CASModule.h  CASModuleDescriptor.cpp  CASModuleDescriptor.h  CASModuleManager.cpp  CMakeLists.txt  IASContextResultHandler.h  IASInitializer.h  IASModuleBuilder.h  std_make_unique.h
src/AngelscriptUtils/ScriptAPI/: CASScheduler.cpp  CASScheduler.h  CMakeLists.txt  Scheduler.cpp
src/AngelscriptUtils/ScriptAPI/Reflection/: ASReflection.cpp  CASEngineReflectionGroup.cpp  CASModuleReflectionGroup.cpp  CMakeLists.txt  EngineReflectionGroup.cpp  IASReflectionGroup.h  ModuleReflectionGroup.cpp  ReflectionGroup.cpp  ReflectionScriptAPI.cpp
src/AngelscriptUtils/add_on/: scriptdictionary.cpp
src/AngelscriptUtils/cmake/: AngelscriptUtilsConfig.cmake
src/AngelscriptUtils/event/: CASBaseEvent.cpp  CASBaseEvent.h  CASBaseEventCaller.h  CASEvent.cpp  CASEventCaller.cpp  CASEventCaller.h  CASEventManager.cpp  CMakeLists.txt  Event.cpp  EventDispatcher.cpp  EventLocator.cpp  EventScriptAPI.cpp  EventSystem.cpp
src/AngelscriptUtils/util/: ASExtendAdapter.cpp  ASLogging.cpp  ASLogging.h  ASPlatform.cpp  ASPlatform.h  ASUtil.cpp  ASUtil.h  CASBaseClass.h  CASBaseLogger.h  CASExtendAdapter.h  CASFileLogger.cpp  CASObjPtr.h  CMakeLists.txt  ContextUtils.cpp  ContextUtils.h  IASExtendAdapter.h  IASLogger.h
src/AngelscriptUtils/utility/: CMakeLists.txt  Objects.cpp  TypeInfo.cpp  TypeStringUtils.cpp
src/AngelscriptUtils/wrapper/: ASCallable.h  CASArguments.cpp  CASArguments.h  CASContext.cpp  CASContext.h  CMakeLists.txt  WrappedScriptContext.cpp
src/AngelscriptUtilsTest/: ASCBaseEntity.h  CBaseEntity.h  CMakeLists.txt  CScriptBaseEntity.h  Main.cpp
src/AngelscriptUtilsTest/resources/scripts/: test.as
src/main/: Main.cpp
src/test/: ASCBaseEntity.h  CBaseEntity.cpp  CBaseEntity.h  CScriptBaseEntity.h  Main.cpp
src/util/: ASUtil.h  CASBaseClass.cpp  CASBaseClass.h  CMakeLists.txt  ContextUtils.cpp  ContextUtils.h  StringUtils.h
src/wrapper/: ASCallable.cpp  ASCallable.h  CASArguments.cpp  CASArguments.h  CASContext.cpp  CASContext.h  CMakeLists.txt
